[package]
name = "lambdaworks_kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.38"
hex = "0.4"
sha256 = "1.1"
itertools = "0.10"

[dev-dependencies]
proptest = "1.1.0"
criterion = "0.4"
const-random = "0.1.15"
libc = "0.2"
iai = "0.1"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.test]
opt-level = 3
